Update README.md for dandy-clojurescript
Document complete prerequisites, modern JDK compiler opens bypass parameters, hosting server scripts, and remote SSH port forwarding command.

TAG=agy
CONV=702512d1-ca37-4d8e-bfe7-24b597a61571